add - adding scrollbars styles and new information

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -50,6 +50,27 @@
   "certificationsTitle": "الشهادات",
   "certificationsItems": [
     {
+      "name": "هاكر أخلاقي محترف",
+      "institution": "SEGURIDAD CERO",
+      "period": "2023",
+      "description": "شهادة إتمام دورة الاختراق الأخلاقي المحترف",
+      "file": "/docs/certificates/SeguridadCero.pdf"
+    },
+    {
+      "name": "HatunSoft",
+      "institution": "كلية الهندسة في الأنظمة والإلكترونيات والصناعة",
+      "period": "2023",
+      "description": "شهادة مشاركة في مسابقة البرمجة الأولى",
+      "file": "/docs/certificates/HatunSoft.pdf"
+    },
+    {
+      "name": "مؤتمر في علوم الحاسوب والإلكترونيات والهندسة الصناعية",
+      "institution": "الجامعة التقنية في أمباتو",
+      "period": "2023",
+      "description": "شهادة إتمام الدورة للموافقة والحضور في دورة \"الحدود البحثية الناشئة في علوم الحاسوب والإلكترونيات والهندسة الصناعية\"",
+      "file": "/docs/certificates/CCSEIE.pdf"
+    },
+    {
       "name": "لغة الإشارة الإكوادورية",
       "institution": "PSICORP - المؤسسة الإكوادورية لعلم النفس",
       "period": "2025",
@@ -80,31 +101,45 @@
     },
     {
       "key": 2,
+      "position": "مطور Full Stack - \"PrescriberApp\" (من PICOFON)",
+      "company": "GRECIL (مجموعة البحث في الإدراك واللغة)",
+      "period": "2024 - 2025",
+      "description": "تطوير تطبيق ويب للتحكم في العلاجات وإدارة المرضى والمتابعة السريرية. تنفيذ وظائف لإدارة المستخدمين والأدوار والتقارير الإحصائية باستخدام تقنيات تطوير الويب الحديثة."
+    },
+    {
+      "key": 3,
+      "position": "مطور ويب",
+      "company": "دار الثقافة تونغوراهوا",
+      "period": "2024 - 2025",
+      "description": "تطوير موقع مؤسسي لدار الثقافة تونغوراهوا، وتنفيذ نظام مخصص لإدارة المحتوى (CMS) لتسهيل تحديث وإدارة الموقع من قبل الموظفين غير التقنيين."
+    },
+    {
+      "key": 4,
       "position": "مطور مبتدئ",
       "company": "تطبيق إدارة المطاعم",
       "period": "2022 - 2023",
       "description": "تطوير تطبيق متعدد المنصات باستخدام Flutter وFirebase لتحسين تدفق الطلبات بين الصالة والمطبخ. المشاركة في ميزات الواجهة والتواصل الفوري."
     },
     {
-      "key": 3,
-      "position": "المطور الرئيسي",
+      "key": 5,
+      "position": "قائد المجال البصري والتفاعلي",
+      "company": "نظام GITT – الجامعة التقنية في أمباتو",
+      "period": "2025 - 2026",
+      "description": "قيادة تصميم وتشغيل الجزء البصري من حل رقمي لإدارة المخزون والإعارات الأكاديمية. تنسيق الفريق والتصميم الوظيفي وتجربة المستخدم."
+    },
+    {
+      "key": 6,
+      "position": "مطور Full Stack",
       "company": "منصة حجز سياحي",
       "period": "2023 - 2024",
       "description": "قيادة تطوير نظام ويب لعرض الوجهات السياحية والتواصل مع المستشارين عبر WhatsApp API. تنفيذ تدفق الشراء والتواصل المباشر."
     },
     {
-      "key": 4,
-      "position": "مدير مشروع",
+      "key": 7,
+      "position": "مدير مشروع - PM",
       "company": "شبكة اجتماعية إنسانية",
       "period": "2024 - 2025",
       "description": "تنسيق الفريق والتصميم الوظيفي لتطبيق يتيح مشاركة معلومات عن المفقودين ودعم المجتمع."
-    },
-    {
-      "key": 5,
-      "position": "قائد المجال البصري والتفاعلي",
-      "company": "نظام GITT – الجامعة التقنية في أمباتو",
-      "period": "2025 - حتى الآن",
-      "description": "قيادة تصميم وتشغيل الجزء البصري من حل رقمي لإدارة المخزون والإعارات الأكاديمية. تنسيق الفريق والتصميم الوظيفي وتجربة المستخدم."
     }
   ],
   "workExperienceNull": "لا توجد خبرة عملية",
