fix - some error with personal datañ update the photo

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -102,7 +102,7 @@
       "key": 2,
       "position": "Full Stack Developer - \"PrescriberApp\" (From PICOFON)",
       "company": "GRECIL (Cognition and Language Research Group)",
-      "period": "2024 - 2025",
+      "period": "2025 - 2025",
       "description": "Development of a Web Application for therapy control, patient management, and clinical follow-up. Implementation of functionalities for user management, roles, and statistical reports using modern web development technologies."
     },
     {
@@ -116,15 +116,15 @@
       "key": 4,
       "position": "Junior Developer",
       "company": "Restaurant Management App",
-      "period": "2022 - 2023",
+      "period": "2021 - 2023",
       "description": "Development of a cross-platform app with Flutter and Firebase to improve order flow between dining room and kitchen. Participation in key interface and real-time communication features."
     },
     {
       "key": 5,
-      "position": "Visual and Interactive Area Leader",
+      "position": "Development Leader",
       "company": "GITT System – Technical University of Ambato",
-      "period": "2025 - 2026",
-      "description": "Lead the design and operation of the visual part of a digital solution for academic inventory and loan management. Team coordination, functional design, and user experience."
+      "period": "2024 - 2025",
+      "description": "Led a team of programmers in the design, development, and deployment of a web application for inventory management and loans at the Technology Workshop."
     },
     {
       "key": 6,
