--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -103,7 +103,7 @@
       "key": 2,
       "position": "مطور Full Stack - \"PrescriberApp\" (من PICOFON)",
       "company": "GRECIL (مجموعة البحث في الإدراك واللغة)",
-      "period": "2024 - 2025",
+      "period": "2025 - 2025",
       "description": "تطوير تطبيق ويب للتحكم في العلاجات وإدارة المرضى والمتابعة السريرية. تنفيذ وظائف لإدارة المستخدمين والأدوار والتقارير الإحصائية باستخدام تقنيات تطوير الويب الحديثة."
     },
     {
@@ -117,15 +117,15 @@
       "key": 4,
       "position": "مطور مبتدئ",
       "company": "تطبيق إدارة المطاعم",
-      "period": "2022 - 2023",
+      "period": "2021 - 2023",
       "description": "تطوير تطبيق متعدد المنصات باستخدام Flutter وFirebase لتحسين تدفق الطلبات بين الصالة والمطبخ. المشاركة في ميزات الواجهة والتواصل الفوري."
     },
     {
       "key": 5,
-      "position": "قائد المجال البصري والتفاعلي",
+      "position": "قائد التطوير",
       "company": "نظام GITT – الجامعة التقنية في أمباتو",
-      "period": "2025 - 2026",
-      "description": "قيادة تصميم وتشغيل الجزء البصري من حل رقمي لإدارة المخزون والإعارات الأكاديمية. تنسيق الفريق والتصميم الوظيفي وتجربة المستخدم."
+      "period": "2024 - 2025",
+      "description": "قدت فريقًا من المبرمجين في تصميم وتطوير ونشر تطبيق ويب لإدارة المخزون والإعارات في ورشة التكنولوجيا."
     },
     {
       "key": 6,
