add - Memory game in General; Move Social network to Contacts Page

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -1,7 +1,7 @@
 {
   "general": {
     "title": "المعلومات العامة",
-    "description": "أنا مطور برمجيات قيد التدريب مع خبرة عملية في تطوير تطبيقات الويب والجوال. أختص في البرمجة والمنطق الحاسوبي والتعليم الشخصي. شغوف بالتكنولوجيا وأستمتع بمشاركة المعرفة مع الطلاب من جميع المستويات، من الثانوية إلى الجامعة. أبحث عن فرص للعمل كمدرس تكنولوجيا أو برمجة، وأساهم بخبرتي في المشاريع الواقعية وبدعوتي كمعلم.",
+    "description": "مطور برمجيات يركز على إنشاء حلول رقمية قوية وقابلة للتوسع. أولويتي هي البرمجة وهندسة الأنظمة وجودة الكود. أكمل ملفي التقني بقدرة قوية على التدريس والتواصل، مما يسمح لي ليس فقط بتطوير برمجيات فعالة ولكن أيضاً تسهيل نقل المعرفة والتوجيه داخل فرق التطوير. أبحث عن تحديات تقنية حيث يمكنني تطبيق خبرتي Full Stack لبناء منتجات عالية التأثير.",
     "skills": {
       "nameSkill": "المهارات التقنية والناعمة",
       "description": "أهم المهارات التقنية والشخصية المكتسبة من خلال التدريب والخبرة.",
@@ -103,7 +103,7 @@
       "key": 2,
       "position": "مطور Full Stack - \"PrescriberApp\" (من PICOFON)",
       "company": "GRECIL (مجموعة البحث في الإدراك واللغة)",
-      "period": "2025 - 2025",
+      "period": "2025",
       "description": "تطوير تطبيق ويب للتحكم في العلاجات وإدارة المرضى والمتابعة السريرية. تنفيذ وظائف لإدارة المستخدمين والأدوار والتقارير الإحصائية باستخدام تقنيات تطوير الويب الحديثة."
     },
     {
@@ -179,6 +179,19 @@
   "emailLabel": "البريد الإلكتروني",
   "phoneLabel": "رقم الهاتف",
   "birthdateLabel": "تاريخ الميلاد",
-  "addressLabel": "العنوان"
+  "addressLabel": "العنوان",
+  "memoryGameTitle": "تعاليمي لك",
+  "memoryGameDescription": "تأمل في هذه الدروس التي علمتني إياها الحياة",
+  "memoryGameMoves": "الحركات",
+  "memoryGameWin": "لقد اكتشفت كل حكمتي المشتركة",
+  "memoryGameReset": "إعادة تعيين",
+  "memoryGamePhrases": [
+    "نعيش مرتين: الأولى متجاهلين أن كل شيء ينتهي، والثانية عالمين أن كل لحظة لا تتكرر",
+    "الصمت هو المكان الذي تجد فيه الأسئلة المهمة أصدق إجاباتها",
+    "ليست العواصف ما تكشف حقيقتك، بل كيف تزرع حديقتك حين لا أحد يراقب",
+    "الإتقان الحقيقي ليس في قهر العالم، بل في فهم أنك لن تفعل أبداً",
+    "هناك حرية عميقة في قبول أن بعض الفصول لن يكون لها إغلاق أبداً",
+    "الوقت لا يشفي شيئاً؛ إنه فقط يعلمنا حمل الجروح بمزيد من الكرامة"
+  ]
 }
   
